# Message-Passing-Neural-Networks-for-Molecular-Property-Prediction

./: .gitignore  0416.py  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
configs/: default.yaml
demo/: app.py
scripts/: demo.py  evaluate.py  train.py
src/: __init__.py
src/eval/: __init__.py  evaluator.py
src/models/: baselines.py  mpnn.py
src/train/: __init__.py  trainer.py
src/utils/: __init__.py  device.py
tests/: test_models.py
